# ATPix

./: .env.example  .env.test  .gitignore  AGENTS.md  COPYRIGHT  README.md  docker-compose.happyview.yml  docker-compose.yml  index.html
apps/backend/: .behaverc  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test
apps/backend/app/: main.py
apps/backend/app/core/: config.py  logging_config.py
apps/backend/docs/: plan.md
apps/backend/docs/tasks/: Task-1.1-Walkthrough.md  Task-1.2-Walkthrough.md  Task-3.1-Walkthrough.md  Task-BE-4.1-Walkthrough.md  Task-docs-happyview-alignment-Walkthrough.md  Task-init-Walkthrough.md
apps/backend/tests/: README.md
apps/backend/tests/features/: authentication_security_SRS-NFR-003.feature  c2pa_ingredient_handling_SRS-F-015.feature  c2pa_manifest_generation_SRS-F-012.feature  c2pa_provenance_edit_SRS-F-013.feature  c2pa_validation_performance_SRS-NFR-017.feature  data_ownership_SRS-NFR-001.feature  environment.py  gallery_query_performance_SRS-NFR-011.feature  happyview_only_sync_SRS-TC-012.feature  happyview_provisioning_SRS-TC-008.feature  lexicon_publication_SRS-F-011.feature  observability_logging_SRS-NFR-004.feature  permissioned_spaces_integration_SRS-F-008.feature  zero_friction_setup_SRS-NFR-007.feature
apps/backend/tests/integration/: test_c2pa_api.py  test_happyview_provision.py  test_health_api.py
apps/backend/tests/support/: happyview_oauth_client.py
apps/backend/tests/unit/: test_c2pa_service.py  test_happyview_oauth_client.py  test_health.py  test_lexicon_artifacts.py  (+1 more)
(+292 files in other folders)
