[project]
name = "atpix-backend"
version = "0.1.0"
description = "ATPix auxiliary API — C2PA processing and health checks"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--alluredir=tests/allure-results --clean-alluredir"